frontend/tests/cases/positive/hsup/swap.gr
swap : forall {a b : Type} . (a, b) [One] -> (b, a) [One]
swap [p] = [let (x, y) = p in (y, x)]