frontend/tests/cases/negative/graded/polarity.gr
secondOrder : ∀ {a : Type, b : Type}
   . (a [1] → b) → a [0] → b
secondOrder f xb = let [x] : a = xb in f [x]

secondOrderAlt : ∀ {a : Type, b : Type}
   . (a [1] → b) → a [0] → b
secondOrderAlt f [x] = f [x]